--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "Python: Current File",
             "type": "python",
@@ -20,8 +21,24 @@
             "args": [
                 "--verbose",
                 "github",
-                "create-repo"
+                "repo",
+                "create"
+            ]
+        },
+        {
+            "name": "MyTools: GitHub List Repositories",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/cli/scripts/main.py",
+            "console": "integratedTerminal",
+            "args": [
+                "--verbose",
+                "github",
+                "repo",
+                "list",
+                "-c"
             ]
         }
+    ]
     ]
 }
